FormatoArepo
Sé creo el repositorio de el formatoA, pero genera conflictos por clases que aun no estan bien definidas